TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix installer (after configuration UI)
 * Add module for relaying events
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)

2007-11-14 MickeM
 + Added multi-line output support ( issue #91 )
 * Improved error handling for external commands
 * Fixed an issue with NRPE/NSClient socket-reading (introduced by the socket_timeout)

2007-11-12 MickeM
 + Added option to configure socket_timeouts (default is now 30 seconds) should (I hope) fix issue #85

2007-11-11 MickeM
 + Added option to configure the behavior of CheckService CheckAll (#64)

2007-11-08 MickeM
 + Added CheckWMIValue to check result-values from a WMI Query
 * Changed so performance values are "collapsed" i.e. 75362115584 = 70.0G (#89)
    If anyone don't want this let me know and I will make an option for it.

2007-11-06 MickeM
 + Added CLI interface to CheckWMI to check queries

2007-11-04 MickeM
 * Rewritten WMI handling as well as checks so things should be more useful now (cf. the wiki page for details)

2007-10-29 MickeM
 * Restructured build and include to work from CLI
 + Started to add makefiles to build from CLI
 + Added Finnish counters (#98)
 * Fixed performance counter issue with check_nt (#99)
 
2007-10-06 MickeM
 + Added auto-upda-te of versions and dates on build to make versions better updated.
 + Fixed x64 build and cleanup a bit.

2007-09-15 MickeM
 + Added better error messages (now return codes are displayed as text). Not implemented all over yet but the infrastructure is there.

2007-09-11 MickeM
 + Added Dutch performance counters to counters.defs
 + Added Spanish performance counters to counters.defs
 + Added #69 [includes] directive to INI-file to include other files
 * Fixed #75 (spelling issue)

2007-06-23 MickeM
 * Might have fixed #53 I was not able to get the problem locally but I have fixed the problem ias at op5 discovered at least...