@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,2,7,75
-#define PRODUCTVER     0,2,7,173
-#define STRFILEVER     "0.2.7.75"
-#define STRPRODUCTVER  "0.2.7.173"
-#define STRPRODUCTDATE  "2007-11-14"
+#define FILEVER        0,2,7,83
+#define PRODUCTVER     0,2,7,181
+#define STRFILEVER     "0.2.7.83"
+#define STRPRODUCTVER  "0.2.7.181"
+#define STRPRODUCTDATE  "2007-11-16"
 #endif // AUTOBUILD_H
